--- a/style.css
+++ b/style.css
@@ -83,3 +83,8 @@ body {
   border-radius: 50%;
   object-fit: cover;
 }
+
+#activity__image:hover {
+  transform: scale(1.1);
+  transition: transform 1s ease-in;
+}
