--- a/style.css
+++ b/style.css
@@ -88,3 +88,44 @@ body {
   transform: scale(1.1);
   transition: transform 1s ease-in;
 }
+
+#guide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 100px 0;
+  background-color: #30343f;
+}
+
+.guide__container {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  width: 600px;
+  background-color: black;
+  color: white;
+  border: 1px solid white;
+  border-radius: 20px;
+  padding: 25px;
+  text-align: center;
+}
+
+.guide__image {
+  width: 50%;
+  object-fit: cover;
+  border-radius: 20px;
+}
+
+.guide__title {
+  font-size: 1.5rem;
+}
+
+.guide__quote {
+  font-style: italic;
+  font-weight: 300;
+}
+
+.guide__signed {
+  font-size: 1.3rem;
+  font-style: italic;
+}
